add layout and tags

--- a/_posts/2025-08-08-utoa.md
+++ b/_posts/2025-08-08-utoa.md
@@ -1,6 +1,8 @@
 ---
+layout: default
 title: "Преобразование числа в строку методом умножения на 10"
 date: 2025-08-08
+tags: деление умножение преобразование строка число
 ---
 
 
